renderProjectsTasks function works...kinda. it's  buggy and some projects won't register. Need to figure out the logic behind it. after that, i need to do the task details window

--- a/style.css
+++ b/style.css
@@ -148,6 +148,9 @@
         .projects:hover{
             cursor: pointer;
         }
+        #allTasks:hover {
+            cursor: pointer;
+        }
 
         
 
